--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "jsonschema": "^1.4.0",
     "lowdb": "^1.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "eslint": "^7.17.0",
